[gd_scene load_steps=15 format=3 uid="uid://blyx6bp23feof"]

[ext_resource type="Script" path="res://scripts/PipelineDamaged.gd" id="1_ymock"]
[ext_resource type="Texture2D" uid="uid://l51hmx4rggn7" path="res://assets/pipelines2.png" id="2_uwd4u"]
[ext_resource type="Texture2D" uid="uid://ddsoylc6gxr6l" path="res://assets/pipelines.png" id="3_sfy1a"]
[ext_resource type="Texture2D" uid="uid://b1byaju5p58ev" path="res://assets/Fire_Hydrant_Water_Jet_16x16.png" id="4_70s3o"]
[ext_resource type="AudioStream" uid="uid://bjwaxbx71bxc3" path="res://assets/sounds/WhatsApp Audio 2024-05-19 at 07.29.17_a975397f.mp3" id="5_jkhdq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1w2t5"]
size = Vector2(61, 72)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ybsth"]
radius = 21.0
height = 208.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2yjre"]
atlas = ExtResource("4_70s3o")
region = Rect2(0, 0, 48, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfbt8"]
atlas = ExtResource("4_70s3o")
region = Rect2(48, 0, 48, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_63pfr"]
atlas = ExtResource("4_70s3o")
region = Rect2(96, 0, 48, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkkya"]
atlas = ExtResource("4_70s3o")
region = Rect2(144, 0, 48, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_aw7ey"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yjre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfbt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63pfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkkya")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}, {
"frames": [],
"loop": true,
"name": &"fixed",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_vomjw"]
_data = [Vector2(0.104839, 0.945055), 0.0, 0.0, 0, 0, Vector2(0.685484, 0.417582), 0.0, 0.0, 0, 0, Vector2(0.935484, 0.164835), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CircleShape2D" id="CircleShape2D_p27x5"]
radius = 21.0

[node name="PipelineDamaged" type="StaticBody2D"]
script = ExtResource("1_ymock")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(49, 16)
shape = SubResource("RectangleShape2D_1w2t5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 8)
shape = SubResource("CapsuleShape2D_ybsth")

[node name="Pipelines2" type="Sprite2D" parent="."]
position = Vector2(36, 7)
texture = ExtResource("2_uwd4u")

[node name="Pipelines" type="Sprite2D" parent="."]
position = Vector2(36, 7)
texture = ExtResource("3_sfy1a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-40, -7)
rotation = -1.58383
scale = Vector2(0.956165, 0.900334)
sprite_frames = SubResource("SpriteFrames_aw7ey")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-11, -8)
emitting = false
amount = 60
lifetime = 0.7
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_vomjw")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-10, -7)
shape = SubResource("CircleShape2D_p27x5")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 30.0
autostart = true

[node name="WaterDamage" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_jkhdq")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="WaterDamage" to="." method="_on_water_damage_timeout"]
